--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^3.13.0"
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "apollo-server-express": "^3.13.0",
+    "framer-motion": "^10.16.15",
+    "react-router-dom": "^6.20.1"
   }
 }
