--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@apollo/server": "^4.7.2",
         "bcrypt": "^5.1.1",
         "express": "^4.17.1",
+        "graphql": "^16.6.0",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^7.0.2"
+        "mongoose": "^7.0.2",
+        "stripe": "^8.67.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
