updated server.js to hopefully resolve GraphQL error

--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "graphql": "^16.6.0",
+    "@apollo/client": "^3.7.14",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "@apollo/client": "^3.7.14"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
@@ -27,7 +28,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^5.0.0",
-    "@chakra-ui/react": "^2.8.2"
+    "vite": "^5.0.0"
   }
 }
