--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.5",
     "@emotion/react": "^11.11.1",
     "apollo-server-express": "^3.13.0",
     "framer-motion": "^10.16.15",
